force-app/main/default/objects/clcommon__CL_Product__c/clcommon__CL_Product__c.object-meta.xml
<CustomObject>
    <label>CL Product</label>
    <nameField>
        <displayFormat>PRO-{00000000}</displayFormat>
        <label>CL Product Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CL Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>