force-app/main/default/objects/clcommon__CL_Product__c/fields/Block_Redraw__c.field-meta.xml
<CustomField>
    <fullName>Block_Redraw__c</fullName>
    <label>Block Redraw</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>