force-app/main/default/objects/clcommon__CL_Product__c/fields/clcommon__Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Asset_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Class</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lease</value>
        </filterItems>
        <filterItems>
            <field>clcommon__Asset_Class__c.Name</field>
            <operation>notContain</operation>
            <value>Consumer</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clcommon__Asset_Class__c</referenceTo>
    <relationshipLabel>CL Products</relationshipLabel>
    <relationshipName>CL_Products</relationshipName>
    <type>Lookup</type>
</CustomField>