force-app/main/default/objects/clcommon__CL_Product__c/fields/clcommon__External_Id__c.field-meta.xml
<CustomField>
    <fullName>clcommon__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>