force-app/main/default/objects/clcommon__CL_Product__c/fields/clcommon__Fee_Set__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Fee_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Set</label>
    <referenceTo>clcommon__Fee_Set__c</referenceTo>
    <relationshipLabel>CL Products</relationshipLabel>
    <relationshipName>CL_Products</relationshipName>
    <type>Lookup</type>
</CustomField>