force-app/main/default/objects/clcommon__CL_Product__c/fields/clcommon__HMDA_Loan__c.field-meta.xml
<CustomField>
    <fullName>clcommon__HMDA_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is applicable only for record type as &quot;Loan&quot;. This checkbox will determine if the loan product falls under the HMDA regulation</description>
    <label>HMDA Loan</label>
    <type>Checkbox</type>
</CustomField>