force-app/main/default/objects/clcommon__CL_Product__c/fields/clcommon__Product_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Product_Abbreviation__c</fullName>
    <description>This field defines the short form of product name</description>
    <inlineHelpText>This field defines the short form of product name</inlineHelpText>
    <label>Product Abbreviation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>