force-app/main/default/objects/clcommon__CL_Product__c/fields/clcommon__Status_Tracking_At_Document_File_Level__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Status_Tracking_At_Document_File_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field if checked enable the status and the document comments to be tracked at the File level</description>
    <inlineHelpText>This field if checked enable the status and the document comments to be tracked at the File level</inlineHelpText>
    <label>Status Tracking at Document File Level</label>
    <type>Checkbox</type>
</CustomField>