force-app/main/default/objects/clcommon__CL_Product__c/fields/genesis__TRID_Loan__c.field-meta.xml
<CustomField>
    <fullName>genesis__TRID_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used to identify a CL product as a TRID compliant product.</description>
    <label>TRID Loan</label>
    <type>Checkbox</type>
</CustomField>