force-app/main/default/objects/clcommon__CL_Product__c/recordTypes/clcommon__Lease.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Lease</fullName>
    <active>true</active>
    <description>Lease Type Of Product</description>
    <label>Lease</label>
</RecordType>