force-app/main/default/objects/clcommon__CL_Product__c/recordTypes/clcommon__Line_Of_Credit.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Line_Of_Credit</fullName>
    <active>true</active>
    <description>Line Of Credit Type Of Product</description>
    <label>Line Of Credit</label>
</RecordType>