force-app/main/default/objects/clcommon__CL_Product__c/recordTypes/clcommon__Loan.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Loan</fullName>
    <active>true</active>
    <description>Loan Type of Product</description>
    <label>Loan</label>
</RecordType>