force-app/main/default/objects/clcommon__CL_Product__c/recordTypes/clcommon__Package.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Package</fullName>
    <active>true</active>
    <description>Parent Product for Complex Credit Facilities</description>
    <label>Package</label>
</RecordType>