force-app/main/default/objects/clcommon__CL_Product__c/recordTypes/clcommon__Treasury_Services.recordType-meta.xml
<RecordType>
    <fullName>clcommon__Treasury_Services</fullName>
    <active>true</active>
    <description>Record Type for Treasury Products.</description>
    <label>Treasury Services</label>
</RecordType>