force-app/main/default/objects/clcommon__CL_Product__c/validationRules/genesis__Validate_Asset_Class.validationRule-meta.xml
<ValidationRule>
    <fullName>genesis__Validate_Asset_Class</fullName>
    <active>false</active>
    <description>Asset Class should be entered while creating a CL Product.</description>
    <errorConditionFormula>clcommon__Asset_Class__c  = null</errorConditionFormula>
    <errorDisplayField>clcommon__Asset_Class__c</errorDisplayField>
    <errorMessage>Please enter the Asset Class.</errorMessage>
</ValidationRule>