force-app/main/default/objects/clcommon__CL_Product__c/listViews/clcommon__All.listView-meta.xml
<ListView>
    <fullName>clcommon__All</fullName>
    <columns>NAME</columns>
    <columns>clcommon__Product_Name__c</columns>
    <columns>clcommon__Asset_Class__c</columns>
    <columns>Block_Redraw__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>